--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Manage/Index.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Manage/Index.cshtml
@@ -26,7 +26,7 @@ else if (this.TempData["changeAvatarError"] != null)
         <dt>Avatar:</dt>
         <dd>
             [
-            @Html.ActionLink("Change your avatar", "ChangeAvatar")
+            @Html.ActionLink("Change profile photo", "ChangeAvatar")
             ]
         </dd>
         <dt>Password:</dt>
