--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_PostTweet.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_PostTweet.cshtml
@@ -4,13 +4,15 @@
                 {
                     HttpMethod = "POST",
                     OnComplete = "postTweet",
-                    InsertionMode = InsertionMode.InsertBefore,
-                }, htmlAttributes: new { @class = "form-horizontal" }))
+                    InsertionMode = InsertionMode.InsertBefore
+                }, htmlAttributes: new { @class = "form-horizontal", @id = "main-post-tweet-box" }))
     {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary("", new { @class = "text-danger" })
-        <textarea type="text" class="form-control" name="content" placeholder="Tweet your mind"></textarea>
+        <textarea type="text" class="form-control" 
+                  onkeyup="trackTweetCharCountMain(this);"
+                  onkeydown="trackTweetCharCountMain(this);" name="content" placeholder="Tweet your mind"></textarea>
         <input class="btn btn-info" type="submit" value="Tweet" />
+        <span class="char-tracker" id="char-tracker-main">140</span>
     }
 </div>
-
