--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_TweetPage.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_TweetPage.cshtml
@@ -1,10 +1,35 @@
 ﻿@model IEnumerable<Twitter.Web.Models.ViewModels.RepliesViewModel>
 
-<div>
+@*For notifications page*@
+@if (!this.Request.IsAjaxRequest())
+{
+    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+}
+
+<div class="tweets-container">
     @if (Model != null)
     {
+        // For notifications page
+        if (!this.Request.IsAjaxRequest())
+        {
+            <h3>Original</h3>
+            @Html.Partial("~/Views/Shared/DisplayTemplates/TweetViewModel.cshtml", @Model.Last());
+
+            <h3>Replies</h3>
+        }
+
+        // If the request is not an AJAX request, avoid printing the original tweet in the replies
+        // as it is the last tweet in the collection
+        int count = Model.Count();
         foreach (var reply in Model)
         {
+            if ((count == 1 && !this.Request.IsAjaxRequest()))
+            {
+                continue;
+            }
+
+            count--;
+
             @Html.Partial("~/Views/Shared/DisplayTemplates/TweetViewModel.cshtml", reply);
         }
     }
