--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_UserRetweets.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_UserRetweets.cshtml
@@ -1,10 +1,23 @@
 ﻿@model IEnumerable<Twitter.Web.Models.ViewModels.TweetViewModel>
 
+@if (!this.Request.IsAjaxRequest())
+{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    <div style="margin-top: 10px"></div>
+}
+
 <div class="tweets-container">
     @{
-        foreach (var tweet in Model)
+        if (Model.Count() != 0)
         {
-            @Html.Partial("~/Views/Shared/DisplayTemplates/TweetViewModel.cshtml", tweet);
+            foreach (var tweet in Model)
+            {
+                @Html.Partial("~/Views/Shared/DisplayTemplates/TweetViewModel.cshtml", tweet);
+            }
+        }
+        else
+        {
+            <h3>No tweets here.</h3>
         }
     }
 </div>
