--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Content/Custom.scss
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Content/Custom.scss
@@ -2,11 +2,20 @@
     background-image: url('Images/Anon_Index.JPG');
 
     .anon-controls-box {
-        width: 50%;
+        width: 90%;
         margin: 0 auto;
+        color: black;
 
         .anon-box {
-            display: inline-block;
+            float: left;
+
+            .anon-box-title {
+                width: 675px;
+            }
+
+            a {
+                color: blue;
+            }
         }
     }
 }
@@ -21,23 +30,32 @@
     }
 
     .container body-content {
-        width: 900px;
+        width: 900px;        
     }
 
     .user-avatar {
         max-width: 100%;
+
+        img {
+            width: 100px;
+        }
     }
 
     .create-tweet-box {
         margin-bottom: 15px;
     }
 
+    .redirect-message-box {
+        width: 50%;
+        margin: 0 auto;
+    }
+
     #main-sidebar {
         background-color: white;
-        margin-top: 10px;
+        margin-top: 20px;
         margin-right: 10px;
         float: left;
-        width: 20%;
+        width: 23%;
         border: 1px solid #E1E8ED;
         border-radius: 5px;
 
@@ -60,18 +78,20 @@
 
                 .sidebar-stat-title {
                     display: inline-block;
+                    margin-right: 23px;
                 }
             }
         }
     }
 
     .tweets-container {
+        margin-top: 10px;
         display: inline-block;
-        width: 50%;
+        width: 600px;
 
         .tweet {
             border: 1px solid #E1E8ED;
-            height: 110px;
+            height: 200px;
             background-color: white;
 
             :hover {
@@ -97,6 +117,8 @@
 
                 .tweet-body-wrapper {
                     display: inline-block;
+                    height: 100%;
+                    width: 70%;
 
                     .tweet-header {
                         display: inline-block;
@@ -125,15 +147,23 @@
                     .tweet-body {
                         margin-top: 15px;
                         display: inline-block;
-                        width: 80%;
+                        width: 100%;
+                        height: 50%;
 
                         .tweet-body-text {
                             width: 100%;
+                            height: 100%;
                             display: inline-block;
                             font-size: 130%;
 
-                            .tweet-body-text-link {
-                                width: 100%;
+                            a {
+                                max-width: 100%;
+                                height: 100%;
+                                white-space: pre-wrap;
+                                white-space: -moz-pre-wrap;
+                                white-space: -pre-wrap;
+                                white-space: -o-pre-wrap;
+                                word-wrap: break-word;
                             }
                         }
                     }
@@ -141,27 +171,35 @@
                     .tweet-footer {
 
                         a {
+                            margin-top: 5px;
                             margin-right: 40px;
                             color: #868585;
                             font-size: 150%;
                             text-decoration: none;
                         }
 
-                        #tweet-reply-icon {
+                        .tweet-reply-icon {
 
                             :hover {
                                 color: #3985ce;
                             }
                         }
 
-                        #tweet-favorite-icon {
+                        .tweet-favorite-icon {
 
                             :hover {
                                 color: #f33d3d;
                             }
                         }
 
-                        #tweet-retweet-icon {
+                        .tweet-unfavorite-icon {
+
+                            :hover {
+                                color: black;
+                            }
+                        }
+
+                        .tweet-retweet-icon {
 
                             :hover {
                                 color: #7fe456;
@@ -170,6 +208,18 @@
                     }
                 }
             }
+        }
+
+        .tweet-replies-controls {
+
+            .tweet-replies-tree {
+                margin-left: 35px;
+                margin-bottom: 15px;
+            }
+        }
+
+        .tweet-reply-box-only {
+            margin-bottom: 15px;
         }
     }
 }
