--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/Register.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Account/Register.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Twitter.Web.Models.ViewModels.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "New here?";
 }
 
 @if (!this.Request.IsAuthenticated)
 {
-    <div class="anon-box">
-        <h2>@ViewBag.Title.</h2>
+    <div class="anon-box" id="register">
+        <h2>@ViewBag.Title</h2>
 
         @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
         {
             @Html.AntiForgeryToken()
-            <h4>Create a new account.</h4>
+            <h4 class="anon-box-title">Create a new account</h4>
             <hr />
             @Html.ValidationSummary("", new { @class = "text-danger" })
             <div class="form-group">
@@ -37,13 +37,7 @@
                 <div class="col-md-10">
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-md-2 control-label">Avatar URL</label>
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.PictureUrl, new { @class = "form-control" })
-                </div>
-            </div>
+            </div>            
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" class="btn btn-default" value="Register" />
