--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_UsersLayout.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_UsersLayout.cshtml
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Custom.css" rel="stylesheet" />
 </head>
 
@@ -20,11 +19,19 @@
                 </button>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink(" ", "Index", "Home", htmlAttributes: new { @class = "glyphicon glyphicon-home" })</li>
+                <ul class="nav navbar-nav">                    
                     @{
                         if (this.Request.IsAuthenticated)
                         {
+                            <li>
+                                @Html.ActionLink(
+                                    linkText: " ",
+                                    actionName: "Index",
+                                    controllerName: "Home",
+                                    routeValues: null,
+                                    htmlAttributes: new { @class = "glyphicon glyphicon-home" })
+                            </li>
+
                             var username = this.User.Identity.Name;
 
                             <li>
@@ -64,7 +71,9 @@
 
 
 
-    <div class="container body-content">        
+    <div class="container body-content">
+        @{ Html.RenderPartial("~/Views/_RedirectMessages.cshtml"); }
+                
         @RenderBody()
         <hr />
     </div>
