--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
@@ -66,7 +66,7 @@
             <h2>@Model.UserName</h2>
 
             @if (this.User.Identity.Name == Model.UserName)
-        {
+            {
                 <h4>
                     @Html.ActionLink(
                     linkText: "Edit Profile",
@@ -81,21 +81,29 @@
     <div id="profile-fillable-area">
         <div class="tweets-container">
             @{
-                foreach (var tweet in Model.Tweets)
+                if (Model.Tweets.Count() != null)
                 {
-                    var tweetViewModel = new Twitter.Web.Models.ViewModels.TweetViewModel()
+                    foreach (var tweet in Model.Tweets)
                     {
-                        Id = tweet.Id,
-                        User = new Twitter.Web.Models.ViewModels.UserTweetViewModel()
+                        var tweetViewModel = new Twitter.Web.Models.ViewModels.TweetViewModel()
                         {
-                            PictureUrl = tweet.User.PictureUrl,
-                            UserName = tweet.User.UserName
-                        },
-                        CreatedOn = tweet.CreatedOn,
-                        Content = tweet.Content
-                    };
+                            Id = tweet.Id,
+                            User = new Twitter.Web.Models.ViewModels.UserTweetViewModel()
+                            {
+                                PictureUrl = tweet.User.PictureUrl,
+                                UserName = tweet.User.UserName
+                            },
+                            CreatedOn = tweet.CreatedOn,
+                            Content = tweet.Content,
+                            FavoritedBy = tweet.FavoritedBy
+                        };
 
-                    @Html.Partial("~/Views/Shared/DisplayTemplates/TweetViewModel.cshtml", tweetViewModel);
+                        @Html.Partial("~/Views/Shared/DisplayTemplates/TweetViewModel.cshtml", tweetViewModel);
+                    }
+                }
+                else
+                {
+                    <h3>No tweets here.</h3>
                 }
             }
         </div>
