--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Following.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Following.cshtml
@@ -1,5 +1,11 @@
 ﻿@model IEnumerable<Twitter.Web.Models.ViewModels.UserTweetViewModel>
 
+@if (!this.Request.IsAjaxRequest())
+{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    <div style="margin-top: 20px"></div>
+}
+
 <div class="profile-following">
     @{
         if (Model.Count() != 0)
@@ -28,7 +34,7 @@
         }
         else
         {
-            <h2>This user is not following anyone.</h2>
+            <h3>This user is not following anyone.</h3>
         }
     }
 </div>
