--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Shared/_Layout.cshtml
@@ -137,6 +137,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <script src="~/Scripts/tweets/tweets.js"></script>
+    <script src="~/Scripts/tweets/custom.js"></script>
 </body>
 </html>
