--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_TweetPage.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Tweets/_TweetPage.cshtml
@@ -3,7 +3,7 @@
 @*For notifications page*@
 @if (!this.Request.IsAjaxRequest())
 {
-    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="tweets-container">
