--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/UserProfile.cshtml
@@ -81,7 +81,7 @@
     <div id="profile-fillable-area">
         <div class="tweets-container">
             @{
-                if (Model.Tweets.Count() != null)
+                if (Model.Tweets.Count() != 0)
                 {
                     foreach (var tweet in Model.Tweets)
                     {
