--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Content/Custom.css
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Content/Custom.css
@@ -23,6 +23,8 @@
     max-width: 100%; }
     #bootstrap-overrides .user-avatar img {
       width: 100px; }
+  #bootstrap-overrides .tweet-tooltip-avatar img {
+    height: 80px; }
   #bootstrap-overrides .create-tweet-box {
     margin-bottom: 15px; }
   #bootstrap-overrides .redirect-message-box {
@@ -56,15 +58,26 @@
       border: 1px solid #E1E8ED;
       height: 180px;
       background-color: white; }
+      @media only screen and (max-width: 768px) {
+        #bootstrap-overrides .tweets-container .tweet {
+          width: 60%;
+          height: 300px; } }
+      @media only screen and (max-width: 480px) {
+        #bootstrap-overrides .tweets-container .tweet {
+          width: 40%;
+          height: 350px; } }
+      @media only screen and (max-width: 360px) {
+        #bootstrap-overrides .tweets-container .tweet {
+          width: 30%;
+          height: 370px; } }
+      @media only screen and (max-width: 240px) {
+        #bootstrap-overrides .tweets-container .tweet {
+          width: 20%;
+          height: 400px; } }
       #bootstrap-overrides .tweets-container .tweet :hover {
         background-color: #F5F8FA; }
       #bootstrap-overrides .tweets-container .tweet .tweet-wrapper {
         height: 100%; }
-        #bootstrap-overrides .tweets-container .tweet .tweet-wrapper .tweet-tooltip {
-          width: 200px;
-          height: 200px;
-          position: absolute;
-          z-index: 2; }
         #bootstrap-overrides .tweets-container .tweet .tweet-wrapper .tweet-avatar {
           float: left;
           display: inline-block;
@@ -105,14 +118,24 @@
               height: 100%;
               display: inline-block;
               font-size: 130%; }
+              @media only screen and (max-width: 480px) {
+                #bootstrap-overrides .tweets-container .tweet .tweet-wrapper .tweet-body-wrapper .tweet-body .tweet-body-text {
+                  font-size: 100%; } }
+              @media only screen and (max-width: 360px) {
+                #bootstrap-overrides .tweets-container .tweet .tweet-wrapper .tweet-body-wrapper .tweet-body .tweet-body-text {
+                  font-size: 90%; } }
+              @media only screen and (max-width: 240px) {
+                #bootstrap-overrides .tweets-container .tweet .tweet-wrapper .tweet-body-wrapper .tweet-body .tweet-body-text {
+                  font-size: 80%; } }
               #bootstrap-overrides .tweets-container .tweet .tweet-wrapper .tweet-body-wrapper .tweet-body .tweet-body-text a {
                 max-width: 100%;
                 height: 100%;
+                word-wrap: break-word;
+                word-break: break-all;
                 white-space: pre-wrap;
                 white-space: -moz-pre-wrap;
                 white-space: -pre-wrap;
-                white-space: -o-pre-wrap;
-                word-wrap: break-word; }
+                white-space: -o-pre-wrap; }
           #bootstrap-overrides .tweets-container .tweet .tweet-wrapper .tweet-body-wrapper .tweet-footer a {
             margin-top: 5px;
             margin-right: 40px;
