--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Content/Custom.scss
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Content/Custom.scss
@@ -30,7 +30,7 @@
     }
 
     .container body-content {
-        width: 900px;        
+        width: 900px;
     }
 
     .user-avatar {
@@ -38,6 +38,13 @@
 
         img {
             width: 100px;
+        }
+    }
+
+    .tweet-tooltip-avatar {
+
+        img {
+            height: 80px;
         }
     }
 
@@ -90,6 +97,26 @@
         width: 600px;
 
         .tweet {
+            @media only screen and (max-width: 768px) {
+                width: 60%;
+                height: 300px;
+            }
+
+            @media only screen and (max-width: 480px) {
+                width: 40%;
+                height: 350px;
+            }
+
+            @media only screen and (max-width: 360px) {
+                width: 30%;
+                height: 370px;
+            }
+
+            @media only screen and (max-width: 240px) {
+                width: 20%;
+                height: 400px;
+            }
+
             border: 1px solid #E1E8ED;
             height: 180px;
             background-color: white;
@@ -100,13 +127,6 @@
 
             .tweet-wrapper {
                 height: 100%;
-
-                .tweet-tooltip {
-                    width: 200px;
-                    height: 200px;
-                    position: absolute;
-                    z-index: 2;
-                }
 
                 .tweet-avatar {
                     float: left;
@@ -158,6 +178,18 @@
                         height: 50%;
 
                         .tweet-body-text {
+                            @media only screen and (max-width: 480px) {
+                                font-size: 100%;
+                            }
+
+                            @media only screen and (max-width: 360px) {
+                                font-size: 90%;
+                            }
+
+                            @media only screen and (max-width: 240px) {
+                                font-size: 80%;
+                            }
+
                             width: 100%;
                             height: 100%;
                             display: inline-block;
@@ -166,11 +198,12 @@
                             a {
                                 max-width: 100%;
                                 height: 100%;
+                                word-wrap: break-word;
+                                word-break: break-all;
                                 white-space: pre-wrap;
                                 white-space: -moz-pre-wrap;
                                 white-space: -pre-wrap;
                                 white-space: -o-pre-wrap;
-                                word-wrap: break-word;
                             }
                         }
                     }
