--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Following.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_Following.cshtml
@@ -2,8 +2,10 @@
 
 @if (!this.Request.IsAjaxRequest())
 {
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    <div style="margin-top: 20px"></div>
+    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+    <div style="margin-top: 20px">
+        <h2>Following</h2>
+    </div>
 }
 
 <div class="profile-following">
