--- a/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_UserRetweets.cshtml
+++ b/Advanced Back-End/ASP.NET MVC/Twitter/Twitter.Web/Views/Users/_UserRetweets.cshtml
@@ -2,8 +2,11 @@
 
 @if (!this.Request.IsAjaxRequest())
 {
-    Layout = "~/Views/Shared/_Layout.cshtml";
-    <div style="margin-top: 10px"></div>
+    Layout = "~/Views/Shared/_UsersLayout.cshtml";
+    <div style="margin-top: 10px">
+        @{ var username = Model.FirstOrDefault().User.UserName;}
+        <h2>@username's Tweets</h2>
+    </div>
 }
 
 <div class="tweets-container">
