Added a details view.

--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Components & Markup/components-markup-exercise/src/app/app.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Components & Markup/components-markup-exercise/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div id="main">
-    <app-article-list class="articles-box"></app-article-list>
-
+    <app-article-list [articles]='articles' (selectedChanged)='onSelectedChanged($event)' class="articles-box"></app-article-list>
+    <app-article-details [article]="selectedArticle"></app-article-details>
 </div>
