--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Components & Markup/components-markup-exercise/src/app/article-list/article-list.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Components & Markup/components-markup-exercise/src/app/article-list/article-list.component.html
@@ -1,3 +1,3 @@
 <div class="article-holder">
-  <div class="article" *ngFor='let article of articles'>{{article.title}}</div>
+  <div class="article" (click)='onArticleChanged(article)' *ngFor='let article of articles'>{{article.title}}</div>
 </div>
