Added font adjustment options for the article content.

--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Components & Markup/components-markup-exercise/src/app/article-details/article-details.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Components & Markup/components-markup-exercise/src/app/article-details/article-details.component.html
@@ -13,7 +13,9 @@
 
     <div>{{article.author}}</div>
     
-    <p>{{article.description}}</p>
+    <button (click)='changeFont(true)'>Increase Font</button>
+    <button (click)='changeFont(false)'>Decrease Font</button>
+    <p [style.font-size]="descriptionFontSize + 'px'">{{article.description}}</p>
     <button 
       *ngIf='ShouldShowReadMoreButton' 
       (click)='limitDescription()'>
