--- a/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Services & Dependency Injection/services-di/src/app/app.component.html
+++ b/Extracurricular Courses/Angular 2 Fundamentals/Exercise -- Services & Dependency Injection/services-di/src/app/app.component.html
@@ -1,3 +1,12 @@
+<div>
+  <label>GitHub profile URL:</label>
+  <input #urlInput type="text" />
+  <button (click)="fetchProfileData(urlInput.value)">Go</button>
+</div>
+
+<hr />
+
 <div style="text-align: left;">
-  <profile></profile>
+  <profile [apiUrl]="profileUrl"></profile>
+  <followers [apiUrl]="profileUrl" *ngIf="profileUrl"></followers>
 </div>
